# favor

./: README.md
FAVOR/: favor.py  favor.sh  generate_patch.py
FAVOR/extract/: CMakeLists.txt  extract.cpp
FAVOR/getfunc/: CMakeLists.txt  getfunc.cpp
